--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,52 @@
-:root{
-    /* color */
-    --primarycolor: #126E82;
-    --secondarycolor: #132C33;
-    --anothercolor: #D8E3E7;
+:root {
+  /* color */
+  --primarycolor: #126e82;
+  --secondarycolor: #132c33;
+  --anothercolor: #d8e3e7;
 
-    /* font */
-
+  /* font */
 }
 
 body {
-	background: var(--primarycolor);
+  background: var(--primarycolor);
 }
 .section-padding {
-	padding: 100px 0;
+  padding: 100px 0;
 }
 
 /* Navbar */
-
+nav {
+  background-color: var(--primarycolor);
+}
 
 /* Home */
 .carousel-item {
-	height: 100vh;
-	min-height: 300px;
+  height: 100vh;
+  min-height: 300px;
 }
 .carousel-caption {
-	bottom: 220px;
-	z-index: 2;
+  bottom: 220px;
+  z-index: 2;
 }
 .carousel-caption h5 {
-	font-size: 45px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	margin-top: 25px;
+  font-size: 45px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
 }
 .carousel-caption p {
-	width: 60%;
-	margin: auto;
-	font-size: 18px;
-	line-height: 1.9;
+  width: 60%;
+  margin: auto;
+  font-size: 18px;
+  line-height: 1.9;
 }
 .carousel-inner:before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.7);
-	z-index: 1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
