--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -1,3 +1,29 @@
+:root {
+  /* color */
+  --primarycolor: #126e82;
+  --secondarycolor: #132c33;
+  --anothercolor: #d8e3e7;
+
+  /* font */
+}
+
 nav {
   /* height: 70px; */
+}
+
+#home {
+  background-color: aqua;
+}
+#home .carousel {
+}
+
+.section-padding {
+  padding: 100px 0px;
+}
+.btn-home {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
 }
