--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -7,18 +7,26 @@
   /* font */
 }
 
+body {
+  background-color: var(--anothercolor);
+}
 nav {
+  background-color: var(--primarycolor);
   /* height: 70px; */
 }
 
 #home {
+  background-image: url(../img/Home\ 1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 757px;
   background-color: aqua;
-}
-#home .carousel {
 }
 
 .section-padding {
-  padding: 100px 0px;
+  padding: 120px 0px;
 }
 .btn-home {
   font-family: 'Inter';
@@ -26,4 +34,19 @@ nav {
   font-weight: 600;
   font-size: 24px;
   line-height: 29px;
+}
+
+.img-news {
+  background-color: #d8e3e7;
+  width: 521px;
+  height: 561px;
+  box-sizing: border-box;
+  border-radius: 30px;
+  overflow: hidden;
+}
+.img-news img {
+  /* scale: 100%; */
+  /* border-radius: 30px 30px 0 0; */
+  transition: all 0.5s ease-in-out;
+  z-index: 1;
 }
