--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -1,52 +1,95 @@
 :root {
-  /* color */
-  --primarycolor: #126e82;
-  --secondarycolor: #132c33;
-  --anothercolor: #d8e3e7;
+    /* color */
+    --primarycolor: #126e82;
+    --secondarycolor: #132c33;
+    --anothercolor: #d8e3e7;
 
-  /* font */
+    /* font */
 }
 
 body {
-  background-color: var(--anothercolor);
+    background-color: var(--primarycolor);
 }
 nav {
-  background-color: var(--primarycolor);
-  /* height: 70px; */
+    background-color: var(--secondarycolor);
+}
+.navbar-brand .logo{
+    width: 70px;
+    height: 70px;
 }
 
 #home {
-  background-image: url(../img/Home\ 1.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  height: 757px;
-  background-color: aqua;
+    background-image: url(../img/Home\ 1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 757px;
 }
 
 .section-padding {
-  padding: 120px 0px;
+    padding: 100px 0px;
 }
 .btn-home {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
 }
 
 .img-news {
-  background-color: #d8e3e7;
-  width: 521px;
-  height: 561px;
-  box-sizing: border-box;
-  border-radius: 30px;
-  overflow: hidden;
+    background-color: #d8e3e7;
+    width: 521px;
+    height: 561px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    overflow: hidden;
 }
 .img-news img {
-  /* scale: 100%; */
-  /* border-radius: 30px 30px 0 0; */
-  transition: all 0.5s ease-in-out;
-  z-index: 1;
+    /* scale: 100%; */
+    /* border-radius: 30px 30px 0 0; */
+    transition: all 0.5s ease-in-out;
+    z-index: 1;
+}
+
+/* Footer */
+.footer{
+    background-color: var(--secondarycolor);
+    border-radius: 20px 20px 0px 0px;
+    margin-top: 100px !important;
+}
+.footer .logo{
+    width: 180px;
+    height: 180px;
+}
+.footer .footer-brand{
+    color: #fff;
+    font-family: var(--headingFont);
+    font-weight: 900;
+}
+.footer .footer-brand span{
+    color: var(--secondaryColor);
+}
+.col1 a{
+    color: #fff;
+}
+.icon-footer i{
+    font-size: 2rem;
+    color: var(--secondaryColor);
+}
+
+.col2 h3, .col3 h3, .col4 h3, .col5 h3{
+    color: #fff;
+    margin-bottom: 20px;
+    font-family: var(--headingFont);
+    font-weight: 700;
+}
+.col2 ul li, .col3 ul li, .col4 ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+
+.col2 a, .col3 a, .col4 a{
+    color: #fff;
 }
