--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -13,7 +13,7 @@ body {
 nav {
     background-color: var(--secondarycolor);
 }
-.navbar-brand .logo{
+.navbar-brand .logo {
     width: 70px;
     height: 70px;
 }
@@ -53,43 +53,74 @@ nav {
     z-index: 1;
 }
 
+/* Event */
+.img-event {
+    scale: 90%;
+    background-color: #d8e3e7;
+    width: 348px;
+    height: 538px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    overflow: hidden;
+}
+.img-event img {
+    /* scale: 100%; */
+    /* border-radius: 30px 30px 0 0; */
+    transition: all 0.5s ease-in-out;
+    z-index: 1;
+}
+.border-event {
+    border: 2px solid #ffffff;
+    border-radius: 50px;
+}
+
 /* Footer */
-.footer{
+.footer {
     background-color: var(--secondarycolor);
     border-radius: 20px 20px 0px 0px;
     margin-top: 100px !important;
 }
-.footer .logo{
+.footer .logo {
     width: 180px;
     height: 180px;
 }
-.footer .footer-brand{
+.footer .footer-brand {
     color: #fff;
     font-family: var(--headingFont);
     font-weight: 900;
 }
-.footer .footer-brand span{
+.footer .footer-brand span {
     color: var(--secondaryColor);
 }
-.col1 a{
+.col1 a {
     color: #fff;
 }
-.icon-footer i{
+.icon-footer i {
     font-size: 2rem;
     color: var(--secondaryColor);
 }
+footer a {
+    text-decoration: none;
+}
 
-.col2 h3, .col3 h3, .col4 h3, .col5 h3{
+.col2 h3,
+.col3 h3,
+.col4 h3,
+.col5 h3 {
     color: #fff;
     margin-bottom: 20px;
     font-family: var(--headingFont);
     font-weight: 700;
 }
-.col2 ul li, .col3 ul li, .col4 ul li{
+.col2 ul li,
+.col3 ul li,
+.col4 ul li {
     list-style: none;
     margin: 10px 0;
 }
 
-.col2 a, .col3 a, .col4 a{
+.col2 a,
+.col3 a,
+.col4 a {
     color: #fff;
 }
