--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
     /* bg color */
     --bg-master: #132C33;
@@ -31,6 +32,7 @@ nav {
 
 .navbar-brand .logo {
     height: 60px;
+    width: auto;
 }
 /* Navbar End */
 
@@ -121,7 +123,7 @@ h1 {
 }
 /* Contact End */
 
-/* Footer */
+/* Footer Start */
 #footer {
     background-color: var(--bg-master);
     border-radius: 20px 20px 0px 0px;
@@ -167,87 +169,9 @@ footer a {
 .col4 a {
     color: #fff;
 }
-/* Footer End */
+/* Footer Start */
 
-/* Sejarah Start */
-.sejarah {
-    width: 90%;
-    height: auto;
-    margin: 5%;
-    padding: 2%;
-    display: flex;
-    border-radius: 5px 5px 5px 5px;
-    background-color: var(--bg-four);
-    box-shadow: 4px 8px rgba(0, 0, 0, 0.4);
-}
-
-.sejarah-teks {
-    width: 60%;
-    height: auto;
-    margin-right: 1%;
-    padding: 50px 20px;
-    box-sizing: border-box;
-    font-family: var(--bodyFont);
-}
-
-.sejarah-teks .teks1 {
-    font-size: 20px;
-
-}
-
-.sejarah-teks .teks2 {
-    font-size: 14px;
-    text-align: justify;
-
-}
-
-.sejarah-gambar {
-    width: 40%;
-    height: auto;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-.sejarah-gambar img {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px 10px 10px 10px;
-}
-/* Sejarah End */
-
-/* Visi & Misi Start */
-.visimisi {
-    width: 94%;
-    height: auto;
-    margin: 10% 3%;
-    display: flex;
-    font-family: var(--bodyFont);
-}
-
-.vm {
-    width: 40%;
-    height: auto;
-    padding: 50px;
-    margin: 0% 0%;
-    border-radius: 5px 5px 5px 5px;
-    background-color: var(--bg-four);
-    box-shadow: 4px 8px rgba(0, 0, 0, 0.4);
-}
-
-.vm .vm1 {
-    font-size: 20px;
-    text-align: center;
-}
-
-.vm li {
-    margin-bottom: 10px;
-    text-align: justify;
-    list-style-type: square;
-}
-/* Visi & Misi End */
-
-/* Struktur Start */
- 
+/* About Start */
 .struktur {
     margin: 5% 0%;
     display: flex;
@@ -266,34 +190,12 @@ footer a {
 }
 
 .profile-txt {
+    height: max-content;
     text-align: center;
     padding: 10px 16px;
     background-color: var(--bg-four);
 }
- 
-
-.struktur {
-    display: flex;
-    justify-content: center;
-}
-
-.profile {
-    width: 20%;
-    margin: 0% 5%;
-    box-shadow: 4px 8px rgba(0, 0, 0, 0.4);
-    transition: 0.3s;
-}
-
-.profile:hover {
-    box-shadow: 8px 16px rgba(0, 0, 0, 0.4);
-}
-
-.profile-txt {
-    text-align: center;
-    padding: 10px 16px;
-    background-color: var(--bg-four);
-}
-/* Struktur End */
+/* About End */
 
 /* Footer Start */
 .btn-contact {
@@ -301,7 +203,7 @@ footer a {
     border: none;
     color: #d8e3e7;
     background-color: #132C33;
-    
+
     /* font */
     font-size: 1.3em;
     font-weight: 700;
@@ -309,13 +211,17 @@ footer a {
     transition: all 0.5s ease-in-out;
     border-radius: 0px 0px 30px 30px;
 }
-.btn-contact:hover{
+
+.btn-contact:hover {
     background-color: #395a62;
     /* border-radius: 30px 0 0 0; */
-}.col3 a,
+}
+
+.col3 a,
 .col4 a {
     color: #fff;
 }
+
 /* Footer End */
 
 /* Sejarah Start */
@@ -332,6 +238,7 @@ footer a {
     height: auto;
     font-family: var(--bodyFont);
 }
+
 /* Sejarah End */
 
 .btn-contact {
@@ -339,7 +246,7 @@ footer a {
     border: none;
     color: #d8e3e7;
     background-color: var(--bg-master);
-    
+
     /* font */
     font-size: 1.3em;
     font-weight: 700;
@@ -347,7 +254,8 @@ footer a {
     transition: all 0.5s ease-in-out;
     border-radius: 0px 0px 30px 30px;
 }
-.btn-contact:hover{
+
+.btn-contact:hover {
     background-color: #395a62;
     /* border-radius: 30px 0 0 0; */
 }
@@ -356,6 +264,7 @@ footer a {
 .section-padding {
     padding: 100px 0px;
 }
+
 .btn-home {
     font-family: var(--bodyFont);
     font-style: normal;
@@ -363,6 +272,7 @@ footer a {
     font-size: 24px;
     line-height: 29px;
 }
+
 .h-head {
     color: #fff;
     font-weight: bold;
